Deprecate field-level forward encoding